--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Shilpa Jagadeeshappa</h1>
+				<p>I'm best known for my work at my company.My research lies in the connectivity between Artificial intelligence(Digital world) and physical world.I  designed a product for my company in the field of object detection in images and videos by training operating systems and modeling the data for detection.I extensively worked on deep learning to build up the IQ and change the behaviour of my Operating systems.<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
