--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        		<li><a href="/">Projects</a></li>
+	        	<li><a href="/about">Publications</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Shilpa Jagadeeshappa</h1>
-				<p>I'm best known for my work at my company.My research lies in the connectivity between Artificial intelligence(Digital world) and physical world.I  designed a product for my company in the field of object detection in images and videos by training operating systems and modeling the data for detection.I extensively worked on deep learning to build up the IQ and change the behaviour of my Operating systems.<a href="/about">Read more about my life...</a></p>
+        		<h1>ShilpaJagadeeshappa</h1>
+				<p>I'm best known for my work at my company.My research lies in the connectivity between Artificial intelligence(Digital world) and physical world.I  designed a product for my company in the field of object detection in images and videos using machine learning.I extensively worked on deep learning to build up the IQ and change the behaviour of the Operating systems.<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:shilpatc25@gmail.com">email</a></li>
+        		<li><a href="https://github.com/ShilpaJagadeeshappa">github.com/ShilpaJagadeeshappa</a></li>
 			</ul>
 		</footer>
 	</body>
 </html>
-4Com
+
