--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Shilpa Jagadeeshappa - Researcher</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<title>Hank Quinlan, Horrible Cop</title>
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Projects</a></li>
-	        	<li><a href="/about">Publications</a></li>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>ShilpaJagadeeshappa</h1>
-				<p>I'm best known for my work at my company.My research lies in the bonding between Artificial intelligence(Digital world) and physical world.I  designed a product for my company in the field of object detection in images and videos using machine learning.I extensively worked on deep learning to build up the IQ and change the behaviour of the Operating systems.<a href="/about">Read more about my life...</a></p>Previously, I earned a Btech degree in Electronics and Communicaion Enggineering from VTU with lots of innovative technical projects.In 2015,I worked on a project named "Generation of 10000 samples using PMF scilab" with my team mates.I also participated in Zonal round and procured with the “Certificate of Merit” at my college of Technoxian in association with E-Cell IIT Delhi Organized by Times world group.<br /> 
-				In Winter 2016(My 3rd year of Enggineering),I worked on “Image Enhancement using Gabor filtereing technique”project.In 2017,I worked on my final year project “Signal conditioning of audio signals for aircraft at AIRCRAFT RESEARCH AND DESIGN CENTRE,HAL,BANGALORE".																			   
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:shilpatc25@gmail.com">email</a></li>
-        		<li><a href="https://github.com/ShilpaJagadeeshappa">github.com/ShilpaJagadeeshappa"</a></li>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
 </html>
-
