--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<img src="image.jpeg" alt="Explore" width="300" height="400">
 	<head>
 		<title>Shilpa Jagadeeshappa - Researcher</title>
 		<!-- link to main stylesheet -->
