--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<img src="image.jpeg" alt="Explore" width="300" height="400">
+	<img src="https://github.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/blob/master/image.jpg" alt="Explore" width="300" height="400">
 	<head>
 		<title>Shilpa Jagadeeshappa - Researcher</title>
 		<!-- link to main stylesheet -->
