--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<img src="https://github.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/blob/master/image.jpg" alt="Explore" width="500" height="500">
+	<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjXramb7bflAhVBvY8KHenOD2gQjRx6BAgBEAQ&url=https%3A%2F%2Fgithub.com%2FShilpaJagadeeshappa&psig=AOvVaw0IktWH-lYzEOZrMvYG3bqy&ust=1572108105144440" alt="Explore" width="500" height="500">
 	<head>
 		<title>Shilpa Jagadeeshappa - Researcher</title>
 		<!-- link to main stylesheet -->
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Shilpa Jagadeeshappa</h1>
+        		<h5>Shilpa Jagadeeshappa</h1>
 				<p>I'am best known for my work at my company who has high potential and bandwidth to explore.I'm a machine learning enthusiast and a B.tech graduate in Electronics and Telecommunication field from VTU.My research lies in the field of machine learning and innovative technologies of sciences.<br><em>A Touch of Alien</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 				<p>Recently I worked as Software engineer on a project at my company to automate a process in the field of object detection using deep learning(AI) and procured Innovation award wherein I researched on many platforms to locate objects in videos or images accurately by transfer learning methods and optimizing the training of operating systems using Matlab,Octave,Sikulix and python.</p>
 					
