--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	
 	<head>
-		<title>Shilpa Jagadeeshappa - Researcher</title>
+		<title>Shilpa Jagadeeshappa-Researcher</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
