--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+	<style>
 		div.b {
   			font-size: large;
 			}
@@ -30,7 +31,7 @@
 				
 				<p><div class="b">In 2017, I worked on my final year project "Signal conditioning of audio signals for aircraft" at AIRCRAFT RESEARCH AND DESIGN CENTRE(ARDC),HAL,BANGALORE.I also presented a paper for our work at International conference ICETSE-2017 at Coorg Institute of Technology (CIT) and
 				published our team work in International journal of Emerging Research in Management and Technology (IJERMT), PONNAMPET, COORG.</div></p>
-
+	 </style>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
