--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<div class="container">
     		<div class="blurb">
 	<style>
-		<div.b {
+		div.b {
   			font-size: large;
-			}>
+			}
         		<h2>Shilpa Jagadeeshappa</h2>
 				<p><div class="b">I'am best known for my work at my company who has high potential and bandwidth to explore.I'm a machine learning enthusiast and a B.tech graduate in Electronics and Telecommunication field from VTU.My research lies in the field of machine learning and innovative technologies of sciences.</div><br><em>A Touch of Alien</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 				<p><div class="b">Recently I worked as Software engineer on a project at my company to automate a process in the field of object detection using deep learning(AI) and procured Innovation award wherein I researched on many platforms to locate objects in videos or images accurately by transfer learning methods and optimizing the training of operating systems using Matlab,Octave,Sikulix and python.</div></p>
