--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+	<img src="image.jpg" alt="Smiley face" width="42" height="42">
 		<nav>
     		<ul>
         		<li><a href="/">Projects</a></li>
