--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-<img src="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg" alt="Smiley face" width="225" height="220" align="left">
+
+		<div style="float: left;"><IMG SRC="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg"> text text text</div>
 		<nav>
     		<ul>
         		  <li><a href="/">  Projects</a></li>
