--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-
+	
 		
 		<nav>
     		<ul>
@@ -19,8 +19,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-		
-    		<img src="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg" alt="Smiley face" width="200" height="200"><h2>Shilpa Jagadeeshappa</h2>
+		<div style="float: left;"><IMG SRC="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg"></div><h2>Shilpa Jagadeeshappa</h2>
+
 			<div<p><div class="b">I'am best known for my work at my company who has high potential and bandwidth to explore.I'm a machine learning enthusiast and a B.tech graduate in Electronics and Telecommunication field from VTU.My research lies in the field of machine learning and innovative technologies of sciences.</div><br><em>A Touch of Alien</em> Don't trust me. <a href="/about">Read more about my life...</a></p></div>
 			<div<p><div class="b">Recently I worked as Software engineer on a project at my company to automate a process in the field of object detection using deep learning(AI) and procured Innovation award wherein I researched on many platforms to locate objects in videos or images accurately by transfer learning methods and optimizing the training of operating systems using Matlab,Octave,Sikulix and python.</div></p></div>
 			<div<p><div class="b">Previously, I earned a B.tech degree in Electronics and Telecommunication with focus on signal processing and digital communication.In 2015, I worked on a project titled "Generation of 10000 samples using PMF Scilab" wherein we worked on different distributions and random process concepts.I also Participated in Zonal round and procured with the “Certificate of Merit” at my college of Technoxian in association with E-Cell IIT Delhi Organized by Times world group.</div></p></div>
