--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="author__avatar"> <img src="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg" class="author__avatar" alt="Shamya Karumbaiah"></div>
             <div class="author__content">
                <h3 class="author__name">Shilpa Jagadeeshappa</h3>
-               <p class="author__bio">Software researcher at Theorem inc, Mysore</p>
+               <p class="author__bio">Software researcher at Theorem inc, Mysore.</p>
             </div>
             <div class="author__urls-wrapper">
                <button class="btn btn--inverse">Follow</button>
