--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <div class="navicon"></div>
                </button>
                <ul class="visible-links">
-                  <li class="masthead__menu-item masthead__menu-item--lg"><a href="#">scientist.engineer.educator</a></li>
+                  <li class="masthead__menu-item masthead__menu-item--lg"><a href="#">explorer.scientist.student</a></li>
                   <li class="masthead__menu-item"><a href="#">Projects</a></li>
                   <li class="masthead__menu-item"><a href="#">Publications</a></li>
                   <li class="masthead__menu-item"><a href="#">CV</a></li>
