LinkedIn url Updated

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <li><a href="#"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
                   <li><a href="https://www.facebook.com/shilpasj.25" target="_blank" ><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
                   <li><a href="https://github.com/ShilpaJagadeeshappa" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
-                  
+                  <li><a href="https://www.linkedin.com/in/shilpa-s-j-5b0792130/" target="_blank"><i class="fab fa-fw fa-LinkedIn" aria-hidden="true"></i> LinkedIn</a></li>
                </ul>
             </div>
          </div>
