--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
    <div id="main" role="main">
       <div class="sidebar sticky">
          <div itemscope="" itemtype="http://schema.org/Person">
-            <div class="author__avatar"> <img src="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg" class="author__avatar" alt="Shamya Karumbaiah"></div>
+            <div class="author__avatar"> <img src="https://raw.githubusercontent.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/master/image1.jpg" class="author__avatar" alt="Shilpa Jagadeeshappa"></div>
             <div class="author__content">
                <h3 class="author__name">Shilpa Jagadeeshappa</h3>
-               <p class="author__bio">Software researcher at Theorem inc, Mysore.</p>
+               <p class="author__bio">Software researcher at Theorems Pvt india Ltd</p>
             </div>
             <div class="author__urls-wrapper">
                <button class="btn btn--inverse">Follow</button>
@@ -165,14 +165,14 @@
                   <li><a href="#"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
                   <li><a href="https://www.facebook.com/shilpasj.25" target="_blank" ><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
                   <li><a href="https://github.com/ShilpaJagadeeshappa" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
-                  <li><a href="https://www.linkedin.com/in/shilpa-s-j-5b0792130/" target="_blank"><i class="fab fa-fw LinkedIn-square" aria-hidden="true"></i> LinkedIn</a></li>
+                  <li><a href="https://www.linkedin.com/in/shilpa-s-j-5b0792130/" target="_blank"><i class="<i class="fas fa-fw fa-graduation-cap"></i>" aria-hidden="true"></i> LinkedIn</a></li>
                </ul>
             </div>
          </div>
       </div>
       <article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
-         <meta itemprop="headline" content="Shamya Karumbaiah">
-         <meta itemprop="description" content="Shamya Karumbaiah">
+         <meta itemprop="headline" content="Shilpa Jagadeeshappa">
+         <meta itemprop="description" content="Shilpa Jagadeeshappa">
          <div class="page__inner-wrap">
             <header>
                <h1 class="page__title" itemprop="headline">Shilpa Jagadeeshappa</h1>
